# zero

./: Cargo.toml  README.md  build.rs  shell.nix
examples/: example_scene.rs
examples/conemarching/: conemarching.wgsl  depth_prepass.wgsl  scene.rs
examples/defered/: geometry_color_pass.wgsl  geometry_pass.wgsl  lighting_pass.wgsl  scene.rs  shadow_map.wgsl  skybox.wgsl
examples/egui/: scene.rs
examples/forward/: color.wgsl  scene.rs  texture.wgsl
examples/headless/: scene.rs
examples/lines/: line.wgsl  scene.rs
examples/raymarching/: raymarching.wgsl  scene.rs
examples/sdf/: scene.rs  sdf.wgsl
examples/skybox/: scene.rs
examples/sponza/: scene.rs
res/cube/: cube.mtl
shaders/: color.wgsl  geometry_color_pass.wgsl  geometry_pass.wgsl  lighting_pass.wgsl  outline.wgsl  present.wgsl  present_texture.wgsl  shader.wgsl  shadow_map.wgsl  skybox.wgsl
src/: camera.rs  deffered_rendering.rs  depth_map.rs  egui.rs  gbuffer.rs  lib.rs  light.rs  line.rs  main.rs  material.rs  mesh.rs  model.rs  present_texture.rs  render_phase.rs  renderer.rs  shadow_map.rs  shapes.rs  skybox.rs  texture.rs  texture_buffer.rs  transform.rs
src/render/: mod.rs  pipeline.rs  pipeline_builder.rs  render_phase.rs  renderer.rs  resources.rs  storage.rs  system.rs  traits.rs
src/renderer/: context.rs  mod.rs  pipeline_builder.rs  resources.rs  system.rs
src/utils/: const_vec.rs  mod.rs  sparse_set.rs
