[package]
name = "zero"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[example]]
name = "scene"
path = "examples/scene.rs"

[[example]]
name = "scene_headless"
path = "examples/scene_headless.rs"
required-features = ["headless"]

[features]
default = ["x11"]
headless = []

wayland = ["winit/wayland"]
x11 = ["winit/x11"]

[dependencies]
winit = { version = "0.28", default-features = false }
wgpu = { version = "0.16" }
bytemuck = { version = "1.13", features = [ "derive" ] }
tobj = { version = "4.0", features = [ "log" ] }
hexasphere = "9.0"
thiserror = "1.0.40"
env_logger = "0.10"
cgmath = "0.18"
image = "0.24"
log = "0.4"

[dev-dependencies]
pollster = "0.2"
