[package]
name = "zero"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[example]]
name = "defered"
path = "examples/defered/scene.rs"
required-features = ["egui"]

[[example]]
name = "headless"
path = "examples/headless/scene.rs"
required-features = ["egui"]

[features]
default = ["x11"]
headless = []
egui = ["dep:egui"]
wayland = ["winit/wayland"]
x11 = ["winit/x11"]

[dependencies]
egui = { version = "0.22.0", features = ["bytemuck"], optional = true }
bytemuck = { version = "1.13", features = [ "derive" ] }
winit = { version = "0.28", default-features = false }
tobj = { version = "4.0", features = [ "log" ] }
wgpu = { version = "0.16" }
hexasphere = "9.0"
thiserror = "1.0.40"
env_logger = "0.10"
cgmath = "0.18"
image = "0.24"
log = "0.4"

[dev-dependencies]
pollster = "0.2"
egui-winit = { version = "0.22.0", default-features = false }
