[package]
name = "zero"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[example]]
name = "conemarching"
path = "examples/conemarching/scene.rs"

[[example]]
name = "defered"
path = "examples/defered/scene.rs"

[[example]]
name = "egui"
path = "examples/egui/scene.rs"
required-features = ["egui"]

[[example]]
name = "forward"
path = "examples/forward/scene.rs"

[[example]]
name = "headless"
path = "examples/headless/scene.rs"
required-features = ["egui"]

[[example]]
name = "lines"
path = "examples/lines/scene.rs"

[[example]]
name = "raymarching"
path = "examples/raymarching/scene.rs"

[[example]]
name = "skybox"
path = "examples/skybox/scene.rs"

[features]
default = ["wayland"]
headless = []
egui = ["dep:egui"]
wayland = ["winit/wayland", "egui-winit/wayland"]
x11 = ["winit/x11"]

[dependencies]
egui = { version = "0.27.0", features = ["bytemuck"], optional = true }
bytemuck = { version = "1.14", features = [ "derive" ] }
# rwh_05 is needed because wgpu is 0.18 and not 0.18.1
winit = { version = "0.29", default-features = false, features = ["rwh_05"] }
tobj = { version = "4", features = [ "log" ] }
wgpu = { version = "0.18" }
hexasphere = "9"
thiserror = "1"
cgmath = "0.18"
image = "0.24"
log = "0.4"

[dev-dependencies]
pollster = "0.2"
env_logger = "0.10"
egui-winit = { version = "0.27.0", default-features = false }
